# OmniVal

./: .gitignore  README.md  pyproject.toml
configs/: benchmarks.json  omnival_default.json
src/omnival/: __init__.py  benchmarks.py  cli.py  config.py  data.py  metrics.py  models.py  pipeline.py  results.py  sample_data.py  scaffolding.py  training.py  validator.py
tests/: test_metrics_validator.py  test_pipeline_smoke.py
