[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnival-code"
version = "0.1.0"
description = "Object-oriented reference implementation for OmniVAL validated chain-of-thought distillation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
omnival = "omnival.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
